--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,3 +1,9 @@
 page-contact {
-
+  .avatar{
+    border-radius: 50%;
+    width: 120px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 10px;
+  }
 }
